TestSuite/Verification/Error/Serial/Syntax/Control-Statement/WhileLoopTest.par
WhileLoopTest{

seq main() : Int {
    var Int a = 0
    while a < 5 {
        a++
    }
    
return 0 
}}